[i965][iris][regression][bisected] multiple piglit and glcts failures on all platforms
Issues began with mesa=167fa288
Many tests appear to be failing with a line like "NIR validation failed after spirv_to_nir"
Sample outout taken from https://mesa-ci.01.org/mesa_master/builds/21305/results/263258105 :
stdout
/tmp/build_root/m64/lib/piglit/bin/shader_runner /tmp/build_root/m64/lib/piglit/tests/spec/arb_gl_spirv/execution/uniform/atomic-uint-aoa-cs.shader_test -auto -fbo
stderr
NIR validation failed after spirv_to_nir
1 errors:
shader: MESA_SHADER_COMPUTE
name: SPIRV:CS:2
local-size: 3, 2, 1
shared-size: 0
inputs: 0
outputs: 0
uniforms: 0
shared: 0
decl_var uniform INTERP_MODE_NONE atomic_uint[2][3] a (~0, 0, 0)
decl_var uniform INTERP_MODE_NONE uint[6] a00_expected (0, 0, 4)
decl_var uniform INTERP_MODE_NONE atomic_uint ok_a00 (~0, 0, 1)
decl_var uniform INTERP_MODE_NONE uint[6] a01_expected (6, 0, 5)
decl_var uniform INTERP_MODE_NONE atomic_uint ok_a01 (~0, 0, 2)
decl_var uniform INTERP_MODE_NONE uint a12_expected (12, 0, 6)
decl_var uniform INTERP_MODE_NONE atomic_uint ok_a12 (~0, 0, 3)
decl_var system INTERP_MODE_NONE uint gl_LocalInvocationIndex
decl_function main (0 params)